Chapter13/13.01-pod-with-host-network.yaml
# A pod using the node’s network namespace
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-network
spec:
  # Using the host node’s network namespace
  hostNetwork: true
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
