Chapter13/13.04-pod-with-host-pid-and-ipc.yaml
# Using the host’s PID and IPC namespaces

# Similar to the hostNetwork option are the hostPID and hostIPC pod spec properties.
#When you set them to true, the pod’s containers will use the node’s PID and IPC
#namespaces, allowing processes running in the containers to see all the other processes
#on the node or communicate with them through IPC, respectively.

apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-pid-and-ipc
spec:
  # You want the pod to use the host’s PID namespace.
  hostPID: true
  # You also want the pod to use the host’s IPC namespace.
  hostIPC: true
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]

# pods usually see only their own processes, but if you run this pod
# and then list the processes from within its container, you’ll see all the processes running
# on the host node, not only the ones running in the container
