Chapter13/13.06-pod-as-user-guest.yaml
# Running containers as a specific user
apiVersion: v1
kind: Pod
metadata:
  name: pod-as-user-guest
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      # You need to specify a user ID, not a username (id 405 corresponds to the guest user).
      runAsUser: 405
