Chapter13/13.08-pod-privileged.yaml
# A pod with a privileged container
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      # This container will run in privileged mode
      privileged: true
