Chapter13/13.11-pod-add-settime-capability.yaml
# Adding the CAP_SYS_TIME capability
apiVersion: v1
kind: Pod
metadata:
  name: pod-add-settime-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    # Capabilities are added or dropped under the securityContext property.
    securityContext:
      capabilities:
        # You’re adding the SYS_TIME capability.
        add:
        - SYS_TIME
