Chapter13/13.12-pod-drop-chown-capability.yaml
# Dropping a capability from a container
apiVersion: v1
kind: Pod
metadata:
  name: pod-drop-chown-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        # You’re not allowing this container to change file ownership.
        drop:
        - CHOWN
