Chapter13/13.21-network-policy-default-deny.yaml
# A default-deny NetworkPolicy
# When you create this NetworkPolicy in a certain namespace, no one can connect to
# any pod in that namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  # Empty pod selector matches all pods in the same namespace
  podSelector:
